--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,15 @@ html, body {
   border-bottom: 1px solid #ccc;
 }
 
+.modal p span:nth-of-type(1) {
+  display: inline-block;
+  width: 25%;
+}
+.modal p span:nth-of-type(2) {
+  display: inline-block;
+  width: 75%;
+}
+
 .modal .actions {
   margin-bottom: 0;
 }
@@ -138,21 +147,10 @@ input[name=view] {
   display: none;
 }
 
-input:nth-of-type(1):checked ~ .viewSelectionContainer label:nth-of-type(1) {
-  box-shadow: 0 -2px 1px -1px #ddd,
-              2px 0 1px -1px #ddd,
-              -2px 0 1px -1px #ddd;
-  border-bottom-color: white;
-}
-
-input:nth-of-type(2):checked ~ .viewSelectionContainer label:nth-of-type(2) {
-  box-shadow: 0 -2px 1px -1px #ddd,
-              2px 0 1px -1px #ddd,
-              -2px 0 1px -1px #ddd;
-  border-bottom-color: white;
-}
-
-input:nth-of-type(3):checked ~ .viewSelectionContainer label:nth-of-type(3) {
+input:nth-of-type(1):checked ~ .viewSelectionContainer label:nth-of-type(1),
+input:nth-of-type(2):checked ~ .viewSelectionContainer label:nth-of-type(2),
+input:nth-of-type(3):checked ~ .viewSelectionContainer label:nth-of-type(3),
+input:nth-of-type(4):checked ~ .viewSelectionContainer label:nth-of-type(4) {
   box-shadow: 0 -2px 1px -1px #ddd,
               2px 0 1px -1px #ddd,
               -2px 0 1px -1px #ddd;
@@ -165,7 +163,8 @@ section.view {
 
 input:nth-of-type(1):checked ~ section.view:nth-of-type(1),
 input:nth-of-type(2):checked ~ section.view:nth-of-type(2),
-input:nth-of-type(3):checked ~ section.view:nth-of-type(3) {
+input:nth-of-type(3):checked ~ section.view:nth-of-type(3),
+input:nth-of-type(4):checked ~ section.view:nth-of-type(4) {
   display: block;
 }
 
@@ -535,6 +534,29 @@ button, label {
               #aaa;
 }
 
+.close::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background: linear-gradient(45deg, #ef5350 0%, #ef5350 6px, transparent 6px, transparent calc(100% - 6px), #ef5350 calc(100% - 6px), #ef5350 100%),
+              linear-gradient(135deg, #ef5350 0%, #ef5350 6px, transparent 6px, transparent calc(100% - 6px), #ef5350 calc(100% - 6px), #ef5350 100%),
+              linear-gradient(45deg, transparent 0%, transparent calc(50% - 1px), white calc(50% - 1px), white calc(50% + 1px), transparent calc(50% + 1px)),
+              linear-gradient(135deg, transparent 0%, transparent calc(50% - 1px), white calc(50% - 1px), white calc(50% + 1px), transparent calc(50% + 1px)),
+              linear-gradient(45deg, transparent 0%, transparent calc(50% - 1px), white calc(50% - 1px), white calc(50% + 1px), transparent calc(50% + 1px)),
+              #ef5350;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s;
+  z-index: 2;
+}
+
+.close:hover::before {
+  opacity: 1;
+}
+
 .pull-left {
   float: left;
 }
@@ -608,12 +630,18 @@ linear-gradient(0deg, transparent 0%, transparent calc(50% - 2px), #009688 calc(
   content: 'Running comparison check of recordings';
 }
 
+#adhocStart::before {
+  content: 'Start ad-hoc recording';
+}
+
+
 .viewSelectionContainer button {
   display: none;
 }
 
 input[name=view]:nth-of-type(2):checked ~ .viewSelectionContainer button:nth-of-type(1),
-input[name=view]:nth-of-type(3):checked ~ .viewSelectionContainer button:nth-of-type(2) {
+input[name=view]:nth-of-type(3):checked ~ .viewSelectionContainer button:nth-of-type(2),
+input[name=view]:nth-of-type(4):checked ~ .viewSelectionContainer button:nth-of-type(3) {
   display: block;
 }
 
@@ -659,4 +687,101 @@ progress[value]::-webkit-progress-value {
     left: -0.25rem;
  /*   transform: translate(-50%,-50%);*/
   }
+}
+
+@media screen and (max-width: 600px) {
+  main {
+    padding: 0;
+  }
+
+  .list::before {
+    text-align: center;
+  }
+
+  h1, header, section > ul > li:first-child, .list > li > span:first-child {
+    display: none;
+  }
+
+  section > ul {
+    margin: 0;
+  }
+
+  .list > li {
+    width: 100%;
+  }
+
+  .list > li > span {
+    width: calc(100%/3);
+  }
+
+  .viewSelectionContainer {
+    border-bottom: none;
+  }
+
+  .viewSelectionContainer label {
+    width: calc(100%/3);
+    border: none;
+    margin: 0;
+    box-shadow: none;
+    background: #f8f8f8;
+    text-align: center;
+    height: 3.5rem;
+    padding: 0 1rem;
+    transition: box-shadow 0.3s;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  .viewSelectionContainer label::after {
+    top: 2rem;
+    right: calc(50% - 0.75rem);
+    filter: grayscale(80%);
+    transition: filter 0.3s;
+  }
+  .viewSelectionContainer label span {
+    display: none;
+  }
+
+  input:nth-of-type(1):checked ~ .viewSelectionContainer label:nth-of-type(1),
+  input:nth-of-type(2):checked ~ .viewSelectionContainer label:nth-of-type(2),
+  input:nth-of-type(3):checked ~ .viewSelectionContainer label:nth-of-type(3) {
+    box-shadow: none;
+    background: white;
+  }
+
+  input:nth-of-type(1):checked ~ .viewSelectionContainer label:nth-of-type(1) {
+    box-shadow: inset 8px 0 0 -8px white,
+                inset -8px 0 0 -8px white,
+                inset 0 8px 0 0 #ef5350;
+
+  }
+  input:nth-of-type(2):checked ~ .viewSelectionContainer label:nth-of-type(2) {
+    box-shadow: inset 8px 0 0 -8px white,
+                inset -8px 0 0 -8px white,
+                inset 0 8px 0 0 #1e88e5;
+  }
+  input:nth-of-type(3):checked ~ .viewSelectionContainer label:nth-of-type(3) {
+    box-shadow: inset 8px 0 0 -8px white,
+                inset -8px 0 0 -8px white,
+                inset 0 8px 0 0 #009688;
+  }
+  input:nth-of-type(1):checked ~ .viewSelectionContainer label:nth-of-type(1)::after,
+  input:nth-of-type(2):checked ~ .viewSelectionContainer label:nth-of-type(2)::after,
+  input:nth-of-type(3):checked ~ .viewSelectionContainer label:nth-of-type(3)::after {
+    filter: grayscale(0);
+  }
+
+  .viewSelectionContainer button {
+    position: absolute;
+    bottom: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 1.25rem;
+    height: 3rem;
+    line-height: 3rem;
+    max-width: 75%;
+}
+
+input[type=number] {
+  width: 5rem;
 }
