--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,13 +348,10 @@ ul .list:empty::before {
 #completed .list > li[data-state].ingesting > span:first-of-type::after {
   width: 8px;
   height: 8px;
-  border: 4px solid #009688;
   top: calc(0.75rem - 4px);
   left: calc(0.75rem - 2px);
   border-radius: 50%;
   opacity: 0;
-  animation: supernova 1s linear infinite;
-  animation-fill-mode: backwards;
   content: '';
   background: none;
 }
@@ -422,8 +419,6 @@ ul .list:empty::before {
   z-index: 1;
 }
 
-
-
 #completed li ul button:last-of-type::before {
   position: absolute;
   top: 0;
@@ -454,7 +449,7 @@ ul .list:empty::before {
   content: 'Ingest recording';
 }
 
-#completed li ul button[disabled]:last-of-type::after {
+#completed li[data-state=ingested] ul button:last-of-type::after {
   content: 'Ingested already';
 }
 
@@ -462,21 +457,15 @@ ul .list:empty::before {
   content: 'Unable to ingest failed recording';
 }
 
+#completed li.ingesting ul button:last-of-type::after {
+  content: 'Ingesting';
+}
 
 #completed li.ingesting ul button:last-of-type {
   text-shadow: 0 1px black;
 }
 
 #completed li.ingesting ul button:last-of-type::before {
-  z-index: -2;
-}
-
-button progress {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   z-index: -2;
 }
 
@@ -654,22 +643,6 @@ input[name=view]:nth-of-type(4):checked ~ .viewSelectionContainer button:nth-of-
   }
 }
 
-progress[value] {
-  -webkit-appearance: none;
-  appearance: none;
-}
-
-progress[value]::-webkit-progress-bar {
-  background-color: #eee;
-  border-radius: 2px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2) inset;
-}
-
-progress[value]::-webkit-progress-value {
-  border-radius: 2px;
-  background: #009688;
-}
-
 @keyframes supernova {
   0% {
     opacity: 1;
@@ -780,6 +753,7 @@ progress[value]::-webkit-progress-value {
     height: 3rem;
     line-height: 3rem;
     max-width: 75%;
+  }
 }
 
 input[type=number] {
